syntax = 'proto2';

package com.shengsiyuan.netty.protobuf;

option optimize_for = SPEED;
option java_package = "com.shengsiyuan.netty.sixthexampleprotobufmanymessages";
option java_outer_classname = "MmMyDataInfo";

// protoc --java_out=src/main/java src/main/java/com/shengsiyuan/netty/sixthexampleprotobufmanymessages/ManyMessagesPerson.proto


message MyMessage {

  enum DataType {
    PersonType = 1;
    DogType = 2;
    CatType = 3;
  }

  required DataType data_type = 1;

  oneof dataBody {
    Person person = 2;
    Dog dog = 3;
    Cat cat = 4;
  }
}

message Person {

  optional string name = 1;
  optional int32  age = 2;
  optional string address = 3;
}

message Dog {
  optional string name = 1;
  optional int32  age = 2;
}

message Cat {
  optional string name = 1;
  optional string  city = 2;
}